[package]
name = "zombie"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.14"
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "js"] }
